# PythonProjectTemplate-DailyNumbersProject

./: .gitignore  DockerFile  README.rst  crontab.yaml  license  setup.cfg  setup.py
SFTPClient/: .gitignore  Dockerfile  FileConfig.py  SFTP_Client.py  SFTP_MAIN.py  main.py  request_config.py  script.sh
SFTPClient/exports/: Full Roster Export Hourly2023-04-23_2023-04-23.xml  ROS11 MFD2023-04-23.xml
SFTPServer/: Dockerfile  __init__.py  server.py
app/: FileConfig.py  FilePathBuilder.py  SFTP.py  StructureTemplate.py  api.py  app.py  main.py  package-lock.json  tailwind.config.js
app/Errors/: Exceptions.py
app/ProjectClasses/: DataFilters.py  DataParser.py  DataProccessingClass.py  DateAndTimeClass.py  Exporter.py  FilePaths.py  Importer.py  Mapper.py  exceptions.py  main.py  project_code_snippets.py
app/ProjectClasses/tests/: test_file_paths.py  test_storage.py
app/data/FileTypeFormatter/: Formatters.py  formaters.py
app/data/api_filter_classs/: filter_class.py  offDutyRecords.json  off_duty_records.json  onDutyRecords.json  (+3 more)
app/main_project_folder/: class_functions.py  datafilters.py  dataparser.py  datetime_formatter.py  exporter.py  file_path_manager.py  importer.py  main.py  mapper.py  project_code_snippets.py  report_type.py  snippets.py
app/static/: script.js
app/templates/: Dragable.html  assignments.html  basic.html  compliment.html  detailed.html  index.html  main.html  overtime.html  test_index.html
app/test_ProjectClases/: __init__.py  test_file_paths.py
app/tests/: test_file_paths.py  test_importer.py  test_storage.py
docs/: Retry.py
(+9 files in other folders)
