[metadata]
name = MFD Daily Numbers Project
author = Jesse Meekins
author-email = jesse.meekins@memphistn.gov
license = MIT 
long_description = file: README.rst
url = None
requires-python = >=3.10
classifiers =
    Development Status :: 4 - Beta
    Enviroment :: Console
    Intended Audience :: Developers 
    Intended Audience :: Information Technology
    license :: Apache Software license
    Operating System :: OS Independent
    Programming Language :: Python 